December 4, 2016
  - Included more verbose commands.

November 21, 2016
  - When creating a tensor from algebras (e.g. CommutatorTensor), the tensor on
    vector spaces is returned, along with a map from the algebra to the vector
    space.

September 26, 2016
  - Removed 'RecognizeStarAlgebra' from 'AdjointAlgebra' (TenSpcElt version).

August 6, 2016
  - Removed TensorAut.m from spec file. 

July 17, 2016
  - Added PseudoIsometryGroup for TenSptElt. It will attempt to use the
    intrinsic in SmallGenus first. Otherwise it will brute-force search if the
    field is finite. Only one shortcut is taken: we search through the
    normalizer of the isometry group. 
  - Added error messages concerning the tensor category. The direction of the 
    arrows and dimensions of the modules must respect the repeat partitions.

July 16, 2016
  - Added IsometryGroup for TenSpcElt. It will attempt to use the intrinsic
    in StarAlg first. Otherwise it will brute-force search if the field is
    finite.
  - Moved the bimap record format to Types.m.
  - Moved 'Adjoint' attribute into the bimap record, and included Isom, PIsom,
    and Aut in the record as well. 

June 30, 2016
  - TensorOverCentroid now properly returns a tensor in the same category as
    the one given.

June 13, 2016
  - Fixed a discrepenacy with HomotopismCategory when Contravariant is set to 
    true.
  - Allowed for users to make cotensors from a matrix or a sequence with one 
    matrix.

June 10, 2016
  - KTensorSpace allows for nonnegative entries now. 
  - Included a verbose command: Multilinear, 1.
  - Improved the performance of 'Image' of a tensor.

June 7, 2016
  - Fixed a bug with SubConstructor and QuoConstructor with tensor spaces. 
  - Quotients and subspaces of tensor spaces now return maps.
  - Improved some error messages.
  - Depreciating 'SubtensorSpace' and 'Quotient' to be replaced by sub< ... >
    and quo< ... > or '/'.

June 3, 2016